--- a/src/BannerFolder/HomeFolder/PortfolioFolder/PortfolioStyle.scss
+++ b/src/BannerFolder/HomeFolder/PortfolioFolder/PortfolioStyle.scss
@@ -106,7 +106,7 @@ $special-Color: #4c5eff;
       width: 45%;
       margin-bottom: auto;
       text-align: center;
-      padding: 5px 0;
+      padding: 5px;
 
       @include responsive(bigphone) {
         width: 45%;
@@ -174,13 +174,9 @@ $special-Color: #4c5eff;
             background-color: rgba(13, 21, 34, 0.694);
             box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
             border: 1px solid rgba(65, 105, 225, 0.36);
-            transform: scale(0.9);
+
             @include responsive(bigphone) {
               width: 40%;
-            }
-
-            &:hover {
-              transform: scale(1);
             }
           }
         }
