--- a/src/BannerFolder/HomeFolder/PortfolioFolder/PortfolioStyle.css
+++ b/src/BannerFolder/HomeFolder/PortfolioFolder/PortfolioStyle.css
@@ -110,6 +110,7 @@
 }
 .Portfolio-con .myProjectCon .projectCard .details .view-project:hover {
   transform: scale(1);
+  background-color: rgba(42, 67, 107, 0.694);
 }
 .Portfolio-con .myProjectCon .projectCard .details .project-description {
   margin: 10px 0;
@@ -149,10 +150,18 @@
   background-color: rgba(13, 21, 34, 0.694);
   box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
   border: 1px solid rgba(65, 105, 225, 0.36);
+  transition: all 0.2s linear;
+}
+.Portfolio-con .myProjectCon .projectCard .details .project-link a:hover {
+  transform: scale(1.1);
+  background-color: rgba(42, 67, 107, 0.694);
 }
 @media only screen and (min-width: 750px) {
   .Portfolio-con .myProjectCon .projectCard .details .project-link a {
     width: 40%;
+  }
+  .Portfolio-con .myProjectCon .projectCard .details .project-link a:hover {
+    transform: scale(1.1);
   }
 }
 .Portfolio-con .slideCont {
