--- a/src/BannerFolder/HomeFolder/PortfolioFolder/PortfolioStyle.scss
+++ b/src/BannerFolder/HomeFolder/PortfolioFolder/PortfolioStyle.scss
@@ -138,10 +138,14 @@ $special-Color: #4c5eff;
           width: 95%;
           cursor: pointer;
           transition: all 0.2s linear;
+          font-size: 13px;
 
           &:hover {
             transform: scale(1);
             background-color: rgba(42, 67, 107, 0.694);
+          }
+          @include responsive(bigphone) {
+            font-size: 17px;
           }
         }
         .project-description {
@@ -176,12 +180,14 @@ $special-Color: #4c5eff;
             box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
             border: 1px solid rgba(65, 105, 225, 0.36);
             transition: all 0.2s linear;
+            font-size: 10px;
 
             &:hover {
               transform: scale(1.1);
               background-color: rgba(42, 67, 107, 0.694);
             }
             @include responsive(bigphone) {
+              font-size: 13px;
               width: 40%;
 
               &:hover {
