--- a/src/TopbarFolder/TopbarStyle.css
+++ b/src/TopbarFolder/TopbarStyle.css
@@ -91,7 +91,11 @@
     border: none;
   }
 }
-.first .topbar nav ul li {
+.first .topbar nav ul a {
+  text-decoration: none;
+  width: 100%;
+}
+.first .topbar nav ul a li {
   color: rgb(150, 171, 217);
   display: flex;
   justify-content: center;
@@ -104,18 +108,18 @@
   transition: all 0.2s linear;
   font-weight: 600;
 }
-.first .topbar nav ul li:hover {
+.first .topbar nav ul a li:hover {
   box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
   background-color: rgba(13, 21, 34, 0.694);
   transform: scale(1.5);
 }
 @media only screen and (min-width: 850px) {
-  .first .topbar nav ul li {
+  .first .topbar nav ul a li {
     border: none;
     font-weight: 700;
     transition: all 0.2s linear;
   }
-  .first .topbar nav ul li:hover {
+  .first .topbar nav ul a li:hover {
     z-index: 5;
     width: 70%;
     background-color: rgba(255, 255, 255, 0);
