--- a/src/TopbarFolder/TopbarStyle.scss
+++ b/src/TopbarFolder/TopbarStyle.scss
@@ -132,34 +132,38 @@ $special-Color: #4c5eff;
           border: none;
         }
 
-        li {
-          color: rgb(150, 171, 217);
-          @include flexDisplay(center, center, row);
-          padding: 10px;
-          border-bottom: 1px solid royalblue;
+        a {
+          text-decoration: none;
           width: 100%;
-          cursor: pointer;
-          transition: all 0.2s linear;
-          font-weight: 600;
-          &:hover {
-            box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
-            background-color: rgba(13, 21, 34, 0.694);
-            transform: scale(1.5);
-          }
-          @include responsive(tablet) {
-            border: none;
-            font-weight: 700;
-            // width: 0;
+          li {
+            color: rgb(150, 171, 217);
+            @include flexDisplay(center, center, row);
+            padding: 10px;
+            border-bottom: 1px solid royalblue;
+            width: 100%;
+            cursor: pointer;
             transition: all 0.2s linear;
-
+            font-weight: 600;
             &:hover {
-              z-index: 5;
-              width: 70%;
-              background-color: rgba(255, 255, 255, 0);
-              box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
+              box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
+              background-color: rgba(13, 21, 34, 0.694);
               transform: scale(1.5);
+            }
+            @include responsive(tablet) {
+              border: none;
+              font-weight: 700;
+              // width: 0;
+              transition: all 0.2s linear;
 
-              // background-color: #444444;
+              &:hover {
+                z-index: 5;
+                width: 70%;
+                background-color: rgba(255, 255, 255, 0);
+                box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
+                transform: scale(1.5);
+
+                // background-color: #444444;
+              }
             }
           }
         }
