--- a/src/BannerFolder/HomeFolder/Home.css
+++ b/src/BannerFolder/HomeFolder/Home.css
@@ -197,4 +197,10 @@ main .footer {
   border-top: 1px solid rgba(65, 105, 225, 0.36);
   border-bottom: 1px solid rgba(65, 105, 225, 0.36);
   padding: 5px 0;
+  font-size: 10px;
+}
+@media only screen and (min-width: 750px) {
+  main .footer {
+    font-size: 15px;
+  }
 }/*# sourceMappingURL=Home.css.map */
