--- a/src/BannerFolder/HomeFolder/Home.scss
+++ b/src/BannerFolder/HomeFolder/Home.scss
@@ -226,5 +226,10 @@ main {
     border-top: 1px solid rgba(65, 105, 225, 0.36);
     border-bottom: 1px solid rgba(65, 105, 225, 0.36);
     padding: 5px 0;
+    font-size: 10px;
+    @include responsive(bigphone) {
+      font-size: 15px;
+     
+    }
   }
 }
