--- a/src/BannerFolder/HomeFolder/PortfolioFolder/PortfolioStyle.scss
+++ b/src/BannerFolder/HomeFolder/PortfolioFolder/PortfolioStyle.scss
@@ -116,6 +116,8 @@ $special-Color: #4c5eff;
       }
       img {
         opacity: 0.5;
+        height: 100%;
+        // border: 2px solid red;
       }
       &:hover {
         .project-img {
