--- a/src/BannerFolder/HomeFolder/PortfolioFolder/PortfolioStyle.css
+++ b/src/BannerFolder/HomeFolder/PortfolioFolder/PortfolioStyle.css
@@ -81,9 +81,22 @@
     padding: 10px 10px;
   }
 }
-.Portfolio-con .myProjectCon .projectCard img {
+.Portfolio-con .myProjectCon .projectCard .img-con {
+  border: 1px solid rgba(65, 105, 225, 0.36);
+  height: 100px;
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.Portfolio-con .myProjectCon .projectCard .img-con img {
   opacity: 0.5;
   height: 100%;
+  width: 100%;
+}
+@media only screen and (min-width: 750px) {
+  .Portfolio-con .myProjectCon .projectCard .img-con {
+    height: 200px;
+  }
 }
 .Portfolio-con .myProjectCon .projectCard:hover .project-img {
   opacity: 1;
