--- a/src/BannerFolder/HomeFolder/PortfolioFolder/PortfolioStyle.css
+++ b/src/BannerFolder/HomeFolder/PortfolioFolder/PortfolioStyle.css
@@ -54,7 +54,6 @@
   align-items: top;
   flex-direction: row;
   flex-wrap: wrap;
-  gap: 50px;
   background-color: rgba(13, 21, 34, 0);
   width: 100%;
   margin: 0 auto;
@@ -72,6 +71,7 @@
   margin-bottom: auto;
   text-align: center;
   padding: 5px;
+  margin: 10px;
 }
 @media only screen and (min-width: 750px) {
   .Portfolio-con .myProjectCon .projectCard {
