--- a/src/BannerFolder/HomeFolder/FormFolder/FormStyle.css
+++ b/src/BannerFolder/HomeFolder/FormFolder/FormStyle.css
@@ -67,7 +67,6 @@
   padding: 5px;
   width: 90%;
   margin: 0 auto;
-  gap: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -82,6 +81,7 @@
   height: 50px;
   border-radius: 5px;
   padding: 0 10px;
+  margin: 10px;
 }
 .form-con form textarea {
   width: 100%;
@@ -99,6 +99,7 @@
   color: rgb(150, 171, 217);
   width: 50%;
   height: 50px;
+  margin: 10px;
 }
 .form-con form button:hover {
   background-color: rgba(45, 71, 113, 0.694);
