--- a/src/BannerFolder/HomeFolder/PortfolioFolder/PortfolioStyle.css
+++ b/src/BannerFolder/HomeFolder/PortfolioFolder/PortfolioStyle.css
@@ -68,7 +68,6 @@
   box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
   border-radius: 5px;
   width: 40%;
-  margin-bottom: auto;
   text-align: center;
   padding: 5px;
   margin: 10px;
@@ -78,7 +77,7 @@
     width: 45%;
     max-width: 400px;
     border-radius: 10px;
-    padding: 10px 10px;
+    padding: 5px 10px;
   }
 }
 .Portfolio-con .myProjectCon .projectCard .img-con {
@@ -110,65 +109,24 @@
     font-size: 25px;
   }
 }
-.Portfolio-con .myProjectCon .projectCard .details .view-project {
-  margin: 0 auto;
-  margin-top: 10px;
-  padding: 5px 0;
-  background-color: rgba(13, 21, 34, 0.694);
-  box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
-  border: 1px solid rgba(65, 105, 225, 0.36);
-  border-radius: 10px;
-  color: rgb(150, 171, 217);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  transform: scale(0.9);
-  width: 95%;
-  cursor: pointer;
-  transition: all 0.2s linear;
-  font-size: 13px;
-}
-.Portfolio-con .myProjectCon .projectCard .details .view-project:hover {
-  transform: scale(1);
-  background-color: rgba(42, 67, 107, 0.694);
-}
-@media only screen and (min-width: 750px) {
-  .Portfolio-con .myProjectCon .projectCard .details .view-project {
-    font-size: 17px;
-  }
-}
-.Portfolio-con .myProjectCon .projectCard .details .project-description {
-  margin: 10px 0;
-  word-spacing: 2px;
-  line-height: 15px;
-  font-size: 10px;
-  color: rgb(150, 171, 217);
-}
-@media only screen and (min-width: 750px) {
-  .Portfolio-con .myProjectCon .projectCard .details .project-description {
-    line-height: 15px;
-    word-spacing: 5px;
-  }
-}
-.Portfolio-con .myProjectCon .projectCard .details .project-link {
+.Portfolio-con .myProjectCon .projectCard .project-link {
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
   padding: 5px 0;
-  gap: 10px;
+  margin: 5px;
   font-size: 10px;
 }
 @media only screen and (min-width: 750px) {
-  .Portfolio-con .myProjectCon .projectCard .details .project-link {
+  .Portfolio-con .myProjectCon .projectCard .project-link {
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-direction: row;
   }
 }
-.Portfolio-con .myProjectCon .projectCard .details .project-link a {
+.Portfolio-con .myProjectCon .projectCard .project-link a {
   width: 90%;
   padding: 5px;
   border-radius: 5px;
@@ -178,17 +136,18 @@
   border: 1px solid rgba(65, 105, 225, 0.36);
   transition: all 0.2s linear;
   font-size: 10px;
+  margin: 5px;
 }
-.Portfolio-con .myProjectCon .projectCard .details .project-link a:hover {
+.Portfolio-con .myProjectCon .projectCard .project-link a:hover {
   transform: scale(1.1);
   background-color: rgba(42, 67, 107, 0.694);
 }
 @media only screen and (min-width: 750px) {
-  .Portfolio-con .myProjectCon .projectCard .details .project-link a {
+  .Portfolio-con .myProjectCon .projectCard .project-link a {
     font-size: 13px;
     width: 40%;
   }
-  .Portfolio-con .myProjectCon .projectCard .details .project-link a:hover {
+  .Portfolio-con .myProjectCon .projectCard .project-link a:hover {
     transform: scale(1.1);
   }
 }
