fix bug in portfolio img

--- a/src/TopbarFolder/TopbarStyle.css
+++ b/src/TopbarFolder/TopbarStyle.css
@@ -157,6 +157,7 @@
   border-radius: 8px;
   margin-bottom: auto;
   width: 80%;
+  height: 150%;
   padding: 5px 5px 45px 5px;
   border: 1px solid rgba(65, 105, 225, 0.255);
 }
