--- a/src/TopbarFolder/TopbarStyle.scss
+++ b/src/TopbarFolder/TopbarStyle.scss
@@ -194,6 +194,7 @@ $special-Color: #4c5eff;
         border-radius: 8px;
         margin-bottom: auto;
         width: 80%;
+        height: 150%;
         // gap: 20px;
         padding: 5px 5px 45px 5px;
         border: 1px solid rgba(65, 105, 225, 0.255);
