--- a/src/TopbarFolder/TopbarStyle.css
+++ b/src/TopbarFolder/TopbarStyle.css
@@ -134,10 +134,11 @@
   flex-direction: column;
   position: absolute;
   right: 0;
-  top: 8rem;
+  top: 6rem;
   height: 140px;
   width: 80px;
   position: fixed;
+  height: 200px;
 }
 @media only screen and (min-width: 850px) {
   .first .topbar .social-media {
