fix bug in portfolio img

--- a/src/TopbarFolder/TopbarStyle.scss
+++ b/src/TopbarFolder/TopbarStyle.scss
@@ -178,7 +178,7 @@ $special-Color: #4c5eff;
       height: 140px;
       width: 80px;
       position: fixed;
-      // border: 2px solid red;
+       border: 2px solid red;
       height: 200px;
 
       //   desktop and tablet view
