--- a/src/TopbarFolder/TopbarStyle.css
+++ b/src/TopbarFolder/TopbarStyle.css
@@ -138,6 +138,7 @@
   height: 140px;
   width: 80px;
   position: fixed;
+  border: 2px solid red;
   height: 200px;
 }
 @media only screen and (min-width: 850px) {
