downloaded video section completed

--- a/src/BannerFolder/BannerStyle.css
+++ b/src/BannerFolder/BannerStyle.css
@@ -26,7 +26,7 @@ section .banner {
   display: flex;
   justify-content: space-around;
   height: 90vh;
-  background: url(/src/images/PortfolioBg.jpg) fixed top;
+  background: url("https://res.cloudinary.com/isreal/image/upload/v1661847047/My%20portfolio%20Project/PortfolioBg_fyio4y.jpg") fixed top;
   background-repeat: no-repeat;
   overflow-y: scroll;
   background-size: 150%;
@@ -99,7 +99,7 @@ section .banner .ban .eye2::before {
 @media only screen and (min-width: 850px) {
   section .banner {
     height: 90vh;
-    background: url(/src/images/PortfolioBg.jpg) fixed top;
+    background: url("https://res.cloudinary.com/isreal/image/upload/v1661847047/My%20portfolio%20Project/PortfolioBg_fyio4y.jpg") fixed top;
     background-repeat: no-repeat;
     background-size: contain;
   }
