--- a/src/BannerFolder/HomeFolder/PortfolioFolder/PortfolioStyle.scss
+++ b/src/BannerFolder/HomeFolder/PortfolioFolder/PortfolioStyle.scss
@@ -105,7 +105,8 @@ $special-Color: #4c5eff;
       background-color: rgba(13, 21, 34, 0.694);
       box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
       border-radius: 5px;
-      width: 40%;
+      width: 100%;
+      height: 100%;
       // margin-bottom: auto;
       text-align: center;
       padding: 5px;
@@ -121,8 +122,9 @@ $special-Color: #4c5eff;
 
       .img-con {
         border: 1px solid rgba(65, 105, 225, 0.36);
-        height: 100px;
+        height: 100%;
         width: 100%;
+        // border: 2px solid red;
         img {
           opacity: 0.5;
           height: 100%;
@@ -152,7 +154,6 @@ $special-Color: #4c5eff;
         @include flexDisplay(space-between, center, column);
         padding: 5px 0;
         margin: 5px;
-
         font-size: 10px;
         @include responsive(bigphone) {
           @include flexDisplay(space-around, center, row);
@@ -160,7 +161,7 @@ $special-Color: #4c5eff;
 
         a {
           width: 90%;
-          padding: 5px;
+          padding: 15px;
           border-radius: 5px;
           color: rgba(150, 171, 217, 0.632);
           background-color: rgba(13, 21, 34, 0.694);
